--- a/style.css
+++ b/style.css
@@ -224,7 +224,7 @@
         line-height: 20px;
     }
     .best{
-        width: 1300px;
+        width: 1200px;
         font-family: 'Chakra Petch', sans-serif;
         font-size: 30px;
         height: auto;
@@ -271,4 +271,60 @@
 
 
 
+    \* Slider Styles */
+
+.slider-container {
+    position: relative;
+    width: 90%;
+    max-width: 300px;    
+    margin: 30px auto;
+    overflow: hidden;
+    border-radius: 12px;
+    align-items: center;
+}
+
+.slider {
+    display: flex;
+    transition: transform 0.4s ease-in-out;
+    gap: 20px;
+    align-items: center;
+}
+
+.slider img {
+    width: 300px;
+    height: 200px;
+    position: relative;
+    object-fit: cover;
+    border-radius: 12px;    
+    flex-shrink: 0;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.4);
+}
+
+.slider-btn {
+    position: absolute;
+    top: 65%;
     
+    transform: translateY(-50%);
+    background:transparent  ;
+    color: #4B2991;
+    border: none;
+    font-size: 2rem;
+    padding: 8px 14px;
+    cursor: pointer;    
+    
+    z-index: 10;
+    transition: 0.3s ease;
+}
+
+.slider-btn:hover {
+    background: #EA4F88;
+    color: white;
+}
+
+.slider-btn.prev {
+    left: 10px;
+}
+
+.slider-btn.next {
+    right: 10px;
+}
