--- a/style_about.css
+++ b/style_about.css
@@ -45,7 +45,7 @@
     font-family: 'Chakra Petch', sans-serif;
     font-size: 40px;
 
-    color: #21325E;
+    color: #F6A97A;
     padding-top: 20px;
     text-align: center;
     
