--- a/assets/css/styles3.css
+++ b/assets/css/styles3.css
@@ -321,7 +321,7 @@ input {
     display: inline-block;
     background-color: var(--primary-color);
     border: 2px solid var(--primary-color);
-    color: var(--body-color);
+    color: var(--accent-purple);
     padding-inline: 1.75rem;
     height: 49px;
     line-height: 49px;
@@ -376,6 +376,7 @@ input {
     background-color: var(--primary-color);
     border: 1px solid var(--border-color);
     width: 30px;
+    color:var(--accent-purple);
     height: 30px;
     border-radius: 50%;
     font-size: var(--tiny-font-size);
@@ -383,10 +384,12 @@ input {
 
 .swiper-button-prev {
     left: initial;
+    color:var(--accent-purple);
     right: 2.5rem;
 }
 
 .swiper-button-next {
+    color:var(--accent-purple);
     right: 0;
 }
 
@@ -399,7 +402,7 @@ input {
 
 .tab__btn {
     background-color: var(--container-color);
-    color: var(--primary-color);
+    color: var(--accent-purple);
     padding: 1rem 1.25rem 0.875rem;
     border-radius: .25rem;
     font-family: var(--second-font);
@@ -566,6 +569,7 @@ input {
 
 .tab__item:not(.active-tab) {
     display: none;
+    color:#4B2991;
 }
 
 /* Product hover effects */
