--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
     }
     .icon{
         width: 200px;
-        float: left;
+        float: left;    
         height: 70px;
     }
     .logo{
@@ -37,6 +37,8 @@
         padding-top: 20px;
         
     }   
+    
+
     
 
     .menu{
@@ -156,6 +158,8 @@
         padding-top: 30px;
         
     }
+    
+    
     .content .par{
         padding-left: 20px;
         padding-bottom:25px;
@@ -172,8 +176,10 @@
         margin-top:4%;
         letter-spacing: 2px;
     }
-    
-    .content .cn{
+    .cn a{
+        color: #ffffff;
+    }
+    .content .cn {
         font-family: 'Chakra Petch', sans-serif;
         font-size: 15px;
         color:#ffffff;
@@ -235,39 +241,57 @@
         padding-bottom: 250px;
     }
     
-    .contacts{
-        width: 100%;
-        height: auto;
-        position: relative;
-        
-
-        background: linear-gradient(to top,rgba(0, 0, 0, 0.5)25%,rgba(0, 0, 0, 0.5)25%);
-        color: #ffffff;
-        padding: 10 20px;
-        padding-bottom: 150px;
-        
-    }
-    .contacts h1{
+    
+    .contacts {
+        padding: 2rem 0;
+        padding-top: 50px;
+      }
+      
+      .contacts__wrapper {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 2rem;
+        flex-wrap: wrap;
+        padding: 0 5rem;
+      }
+      
+      .contacts__text {
+        flex: 1;
+      }
+      
+      .contacts h1 {
         font-family: 'Chakra Petch', sans-serif;
         font-size: 50px;
-        padding: 50px 0;
-        color: #ffffff  ;
-        padding-left: 15rem;
-        
+        padding: 20px 200px;
+        color: #ffffff;
         letter-spacing: 2px;
-    }
-    .contacts p{
-        padding-left: 15rem;
-        padding-bottom:25px;
+      }
+      
+      .contacts p {
         font-family: 'Chakra Petch', sans-serif;
         letter-spacing: 1.5px;
+        padding: 20px 200px;
         line-height: 20px;
-    }
-    .contacts span{
+        color: #ffffff;
+        margin-bottom: 10px;
+      }
+      
+      .contacts span {
         color: #F6A97A;
-        font-size:50px;
-
-    }
+        font-size: 50px;
+      }
+      
+      .logo_img {
+        width: 400px;
+        height: 400px;
+        padding-right: 150px;
+        border-radius: 50%;
+        object-fit: cover;
+        flex-shrink: 0;
+      }
+      
+    
 
 
 
@@ -385,16 +409,18 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(160px, 3fr));
     gap: 1rem;
+    
     overflow-x: auto;
     scroll-behavior: smooth;
     padding-bottom: 1rem;
+    padding-top: 1rem;
     margin-left: 5rem;
     margin-right: 5rem;
   }
   
   .category__card {
     background: transparent;
-    border: 1px solid rgba(255, 255, 255, 0.1);
+    border: 1px solid rgba(210, 210, 210, 0.752);
     padding: 1rem;
     text-align: center;
     border-radius: 1rem;
